# WDS

./: Doxyfile
Platform_app/: .gitignore  CMakeLists.txt  ImuErrorPlotWidget.cpp  ImuErrorPlotWidget.h  ImuGForce.cpp  ImuGForce.h  hexagon.cpp  hexagon.h  imudisplay.cpp  imudisplay.h  main.cpp  mainwindow.cpp  mainwindow.h  platformviewer.cpp  platformviewer.h
Platform_app/translations/: app_en.ts  app_pl.ts
